# rotext

./: .npmrc  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain  tsconfig.base.json
.github/workflows/: pages.yml  testing-rust.yml
dev/solid-components/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: rotext入门.rotext
docs/语法参考/: navigation.md  全局阶段.md  块级阶段.md  行内阶段.md  通用概念.md
internal/example-documentations/: lib.ts  package.json
internal/nodes/: lib.ts  package.json
internal/parsing/: justfile  lib.ts  package.json
internal/renderer-core/: justfile  lib.ts  package.json  rollup.config.js
internal/renderer-snabbdom/: lib.ts  package.json  rollup.config.js
internal/renderer-vue/: justfile  lib.ts  package.json  rollup.config.js
internal/to-html/: lib.ts  package.json
playground/: index.html  justfile  package.json  tailwind.config.ts  tsconfig.json
rust/: Cargo.toml  justfile
rust/rotext/: Cargo.toml  justfile
rust/rotext/benches/: getting_started.rs
rust/rotext/src/: common.rs  errors.rs  events.rs  global.rs  global_level_parser.rs  lib.rs  types.rs  utils.rs
rust/rotext/src/_rendering/tests/: mod.rs  support.rs
rust/rotext/src/blend/: events.rs  mod.rs  tests.rs
rust/rotext/src/block/: context.rs  events.rs  global_mapper.rs  mod.rs  parser_inner.rs  root_parser.rs  stack_wrapper.rs  state.rs  tests.rs  types.rs  utils.rs
rust/rotext/src/block/global_mapper/: mod.rs  tests.rs
rust/rotext/src/block/global_mapper/tests/: mod.rs  support.rs
rust/rotext/src/block/line/: mod.rs
rust/rotext/src/block/line/global_phase/: mod.rs  tests.rs
rust/rotext/src/block/line/normal/: mod.rs  tests.rs
rust/rotext/src/block/line/verbatim/: mod.rs
rust/rotext/src/block/sub_parsers/: code_block.rs  content.rs  heading.rs  inline.rs  mod.rs  paragraph.rs  utils.rs
rust/rotext/src/block/tests/: groups_block_quote.rs  groups_code_block.rs  groups_description_list.rs  groups_heading.rs  groups_horizontal_rule.rs  groups_list.rs  groups_paragraph.rs  groups_table.rs  mod.rs  support.rs  utils.rs
rust/rotext/src/block_2/: mod.rs  parser_inner.rs  stack_wrapper.rs  state.rs  tests.rs  types.rs
rust/rotext/src/block_2/line/: mod.rs  verbatim.rs
rust/rotext/src/block_2/line/global_phase/: mod.rs  tests.rs
rust/rotext/src/block_2/line/normal/: mod.rs  tests.rs
rust/rotext/src/block_2/line/verbatim/: mod.rs
rust/rotext/src/block_2/test_support/: mocks.rs
rust/rotext/src/compiling/: html_renderer.rs  mod.rs  renderer.rs
rust/rotext/src/executing/: extensions.rs  mod.rs  renderer.rs
rust/rotext/src/executing/tests/: fixtures.rs  mod.rs  support.rs
rust/rotext/src/global/: events.rs  mod.rs  tests.rs
rust/rotext/src/global/tests/: mod.rs  support.rs
rust/rotext/src/inline/: events.rs  mod.rs  parser_inner.rs  stack_wrapper.rs  tests.rs  types.rs
rust/rotext/src/inline/test_support/: mocks.rs
rust/rotext/src/rendering/: mod.rs  tests.rs
rust/rotext/src/rendering/tests/: mod.rs  support.rs
rust/rotext/src/test_suites/: mod.rs
rust/rotext/src/test_suites/blend/: mod.rs  support.rs
rust/rotext/src/test_suites/blend/groups/: regression.rs
rust/rotext/src/test_suites/block/: mod.rs  support.rs
rust/rotext/src/test_suites/block/groups/: block_quote.rs  code_block.rs  description_list.rs  heading.rs  horizontal_rule.rs  list.rs  mod.rs  paragraph.rs  table.rs
rust/rotext/src/test_suites/inline/: mod.rs  support.rs
rust/rotext/src/test_suites/inline/groups/: basic.rs  code_span.rs  dicexp.rs  internal_link.rs  mod.rs  ref_link.rs  ruby.rs  strong_and_strikethrough.rs  wiki_link.rs
rust/rotext/src/test_support/: mod.rs
rust/rotext/src/test_utils/: mod.rs
rust/rotext/src/utils/: mod.rs  stack.rs
rust/rotext/src/utils/internal/: array_queue.rs  mod.rs  string.rs  utf8.rs
rust/rotext_core/: Cargo.toml
rust/rotext_core/src/: common.rs  events.rs  lib.rs  types.rs
rust/rotext_core/src/blend/: mod.rs
rust/rotext_core/src/block/: mod.rs  parser_inner.rs  stack_wrapper.rs  state.rs  types.rs  utils.rs
rust/rotext_core/src/block/line/: mod.rs
rust/rotext_core/src/block/line/global_phase/: mod.rs  tests.rs
rust/rotext_core/src/block/line/normal/: mod.rs  tests.rs
rust/rotext_core/src/block/line/verbatim/: mod.rs  tests.rs
rust/rotext_core/src/block/test_support/: mocks.rs
rust/rotext_core/src/inline/: mod.rs  parser_inner.rs  stack_wrapper.rs  tests.rs  types.rs
rust/rotext_core/src/internal_utils/: array_queue.rs  peekable.rs  string.rs
rust/rotext_internal_macros/: Cargo.toml
rust/rotext_internal_macros/src/: lib.rs  utils.rs
rust/rotext_internal_macros/src/macros/: make_markup_guard.rs  make_markup_pseudo_enum.rs  mod.rs
rust/rotext_internal_macros/src/macros/simple_sub_enum/: data_for_event.rs  ensure_cases.rs  mod.rs
rust/rotext_internal_test/: Cargo.toml
rust/rotext_internal_test/src/: contexts.rs  lib.rs  support.rs
rust/rotext_internal_test/src/suites/blend/: mod.rs  support.rs
rust/rotext_internal_test/src/suites/blend/groups/: mod.rs  regression.rs
rust/rotext_internal_test/src/suites/block/: mod.rs  support.rs
rust/rotext_internal_test/src/suites/block/groups/: block_quote.rs  call.rs  code_block.rs  description_list.rs  heading.rs  horizontal_rule.rs  list.rs  mod.rs  paragraph.rs  table.rs
rust/rotext_internal_test/src/suites/inline/: mod.rs  support.rs
rust/rotext_internal_test/src/suites/inline/groups/: basic.rs  call.rs  code_span.rs  dicexp.rs  mod.rs  ref_link.rs  ruby.rs  strong_and_strikethrough.rs  text_styles.rs  wiki_link.rs
rust/rotext_utils/: Cargo.toml
rust/rotext_utils/src/: stack.rs
rust/rotext_wasm_bindings/: Cargo.toml
rust/rotext_wasm_bindings/src/: lib.rs
rust/rotext_wasm_bindings/src/data_exchange/: block_id_to_lines_map.rs  events_in_debug_format.rs  extension.rs  mod.rs  tag_name_map.rs
testground/: index.html  package.json
testground-solid/: index.html
website/: .gitignore  index.html  justfile  package.json  tailwind.config.ts  vite.config.ts
(+407 files in other folders)
