[workspace]

resolver = "2"

members = ["rotext", "rotext_internal_macros", "rotext_wasm_bindings"]

[workspace.package]

rust-version = "1.80.0"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Umaĵo <umajho@proton.me>"]
repository = "https://github.com/umajho/rotext"

[workspace.dependencies]

rotext = { path = "rotext" }
rotext_wasm_bindings = { path = "rotext_wasm_bindings" }
rotext_internal_macros = { path = "rotext_internal_macros" }
