[workspace]

resolver = "2"

members = [
    "rotext_core",
    "rotext_internal_test",
    "rotext_utils",
    "rotext",
    "rotext_internal_macros",
    "rotext_wasm_bindings",
]

[workspace.package]

rust-version = "1.85.0"
version = "0.2.0"
license = "MIT"
edition = "2024"
authors = ["Umaĵo <umajho@proton.me>"]
repository = "https://github.com/umajho/rotext"

[workspace.dependencies]

rotext_core = { version = "0.2.0", path = "rotext_core" }
rotext_internal_test = { version = "0.2.0", path = "rotext_internal_test" }
rotext_utils = { version = "0.2.0", path = "rotext_utils" }
rotext = { version = "0.2.0", path = "rotext" }
rotext_wasm_bindings = { version = "0.2.0", path = "rotext_wasm_bindings" }
rotext_internal_macros = { version = "0.2.0", path = "rotext_internal_macros" }
