[package]
name = "rotext"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "The official and de facto Rotext parser."

[dependencies]
derivative = "2.2.0"
log = "0.4.22"
subenum = "1.1.2"

[dev-dependencies]
rstest = "0.21.0"
