[package]
name = "rotext"
rust-version.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "The official and de facto Rotext parser."

[features]
line-number = []
block-id = []

[dependencies]
rotext_internal_macros = { workspace = true }

derivative = "2.2.0"
itoa = "1.0.11"
log = "0.4.22"
subenum = "1.1.2"

[dev-dependencies]
divan = "0.1.14"
indoc = "2.0.5"

[[bench]]
name = "getting_started"
harness = false
