[package]
name = "rotext"
rust-version.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "The official and de facto Rotext parser."

[features]
test = ["rotext_core/test"]
line-number = ["rotext_core/line-number"]
block-id = ["rotext_core/block-id"]

[dependencies]
rotext_core = { workspace = true }
rotext_utils = { workspace = true }
rotext_internal_macros = { workspace = true }

itoa = "1.0.11"

[dev-dependencies]
rotext_core = { workspace = true, features = ["test"] }
rotext_internal_test = { workspace = true }

divan = "0.1.14"

[[bench]]
name = "getting_started"
harness = false
