[package]
name = "rotext_core"
rust-version.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "The core (no_std) part of the official and de facto Rotext parser."

[features]
test = []
line-number = []
block-id = []

[dependencies]
rotext_internal_macros = { workspace = true }
