[package]
name = "rotext_internal_macros"
rust-version.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "internal macros used by rotext."

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.5.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
