[package]
name = "rotext_wasm_bindings"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "WASM bindings for rust crate `rotext`"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rotext.workspace = true

wasm-bindgen = "0.2.92"

console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

log = "0.4.22"

lol_alloc = "0.4.1"

[profile.release]
# small code size.
opt-level = "s"
